Blender 3.0 beta Cannot open folder shortcuts under Windows #92577

Closed
opened 2021-10-28 16:58:32 +02:00 by Bise Chen · 27 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits

Blender Version
Broken: version: 3.0.0 Beta 901fa96b7f
Worked: 901fa96b7f~

Short description of error
On Windows cannot open folders shortcuts (by either double or single clicking on them).

Exact steps for others to reproduce the error

  1. Click a folder shortcut (e..g, on Desktop pointing to My Documents).
  2. Use File --> Open.
  3. Navigate to the folder containing the shortcut and try to go inside it (e.g., in the Desktop folder try to enter the My Documents shortcut).
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits **Blender Version** Broken: version: 3.0.0 Beta 901fa96b7f Worked: 901fa96b7f~ **Short description of error** On Windows cannot open folders shortcuts (by either double or single clicking on them). **Exact steps for others to reproduce the error** 1. Click a folder shortcut (e..g, on Desktop pointing to My Documents). 2. Use File --> Open. 3. Navigate to the folder containing the shortcut and try to go inside it (e.g., in the Desktop folder try to enter the My Documents shortcut).
Author

Added subscriber: @bise.chen

Added subscriber: @bise.chen

#93262 was marked as duplicate of this issue

#93262 was marked as duplicate of this issue

#92829 was marked as duplicate of this issue

#92829 was marked as duplicate of this issue
Bise Chen changed title from Cannot open folder shortcuts under Windows to Blender 3.0 beta Cannot open folder shortcuts under Windows 2021-10-28 17:01:20 +02:00
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

Strangely, shortcuts to folders are opening correctly if you highlight the item then click the "Open" button, but do not work if you simply double-click on the item.

Strangely, shortcuts to folders are opening correctly if you highlight the item then click the "Open" button, but do not work if you simply double-click on the item.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

This might be one for @Severin.

file_execute handles this kind of redirection (Mac Alias and Windows shortcut) just fine. When you select such an item, click the "Open" button this is called directly and works great.

But when you double-click (or single click with the new option enable), we call mouse_execute and it never makes it to file_execute as file_ensure_hovered_is_active returns false.

When double-clicking I see file_select being called three times, with the first two successful (returning FILE_SELECT_DIR) and the last failing (returning FILE_SELECT_NOTHING). It returns nothing because file_selection_get has return "-2" for sel.last.

This is only double-click and weird that we get three calls to file_select in this case. With 847d355cab - I see I some removals of code that waits to deselect things, so perhaps the item is being deselected?

In 05879f2c36 - I see file_select_deselect_all being called after a comment about "single select, deselect all selected first" but I don't see an explicit check for single select there.

This might be one for @Severin. `file_execute` handles this kind of redirection (Mac Alias and Windows shortcut) just fine. When you select such an item, click the "Open" button this is called directly and works great. But when you double-click (or single click with the new option enable), we call `mouse_execute` and it never makes it to `file_execute` as `file_ensure_hovered_is_active` returns false. When double-clicking I see `file_select` being called three times, with the first two successful (returning FILE_SELECT_DIR) and the last failing (returning FILE_SELECT_NOTHING). It returns nothing because `file_selection_get` has return "-2" for sel.last. This is only double-click and weird that we get three calls to `file_select` in this case. With 847d355cab - I see I some removals of code that waits to deselect things, so perhaps the item is being deselected? In 05879f2c36 - I see file_select_deselect_all being called after a comment about "single select, deselect all selected first" but I don't see an explicit check for single select there.
Author

In #92577#1243362, @Harley wrote:
Strangely, shortcuts to folders are opening correctly if you highlight the item then click the "Open" button, but do not work if you simply double-click on the item.

Thank you for your supplementary explanation.
This may be a minor issue, but it should be corrected.

> In #92577#1243362, @Harley wrote: > Strangely, shortcuts to folders are opening correctly if you highlight the item then click the "Open" button, but do not work if you simply double-click on the item. Thank you for your supplementary explanation. This may be a minor issue, but it should be corrected.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Hey @ankitm can you check this on Mac when you get a chance, as I think this would affect Mac aliases to folders too. If so we can change this description.

Hey @ankitm can you check this on Mac when you get a chance, as I think this would affect Mac aliases to folders too. If so we can change this description.
Member

On 75f5edcaf3 mac alias to folders and files work as expected on double click

On 75f5edcaf3 mac alias to folders and files work as expected on double click
Member

@ankitm - mac alias to folders and files work as expected on double click

Hey, sorry to be pedantic but you definitely tested aliases to folders?

Here on Windows, shortcuts to blends work fine still too. It is only double-clicking on shortcuts to folders that just refresh the current location. Just having a hard time seeing how one could break and not the other.

> @ankitm - mac alias to folders and files work as expected on double click Hey, sorry to be pedantic but you definitely tested aliases to **folders**? Here on Windows, shortcuts to blends work fine still too. It is only double-clicking on shortcuts to folders that just refresh the current location. Just having a hard time seeing how one could break and not the other.
Member
[F11679817](https://archive.blender.org/developer/F11679817/Screen_Recording_2021-11-02_at_22.20.01.mov)
Member

@ankitm - Thanks for that! Hopefully will help narrow this down.

@ankitm - Thanks for that! Hopefully will help narrow this down.
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Member

Ray bisected this and the problem starts here:

901fa96b7f

I'm not familiar enough with keymaps and python to help here.

@pablovazquez - Your commit here broke the ability for Windows users to open by double-click (or single click if that option is turned on) shortcuts to folders. This seems like there are multiple operators running and the item is deselected by one of them.

Ray bisected this and the problem starts here: 901fa96b7f I'm not familiar enough with keymaps and python to help here. @pablovazquez - Your commit here broke the ability for Windows users to open by double-click (or single click if that option is turned on) shortcuts to folders. This seems like there are multiple operators running and the item is deselected by one of them.

Added subscriber: @zgorg

Added subscriber: @zgorg
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

This is starting to concern me a little bit, we're nearing bcon4 in little over a week and this is still unfixed, 901fa96b7f broke windows in a pretty bad way, either fix the bug or revert the commit, but we cannot ship new functionality that that breaks existing functionality.

Bumping the prio

This is starting to concern me a little bit, we're nearing bcon4 in little over a week and this is still unfixed, 901fa96b7f broke windows in a pretty bad way, either fix the bug or revert the commit, but we *cannot* ship new functionality that that breaks existing functionality. Bumping the prio

Added subscriber: @Lillya

Added subscriber: @Lillya
Author

Under the windows system, there is a built-in function to open a folder or file with a single press of a button. You only need to set it in the viewing options, but almost no one uses this single-press function.

I don’t understand the purpose of adding 901fa96b7f in Blender 3.0

Under the windows system, there is a built-in function to open a folder or file with a single press of a button. You only need to set it in the viewing options, but almost no one uses this single-press function. I don’t understand the purpose of adding 901fa96b7f in Blender 3.0
Julian Eisel self-assigned this 2021-11-26 20:12:26 +01:00
Member

I have a fix for this ready but don't have the time to upload and explain it now. Will do it later today or tomorrow.

I have a fix for this ready but don't have the time to upload and explain it now. Will do it later today or tomorrow.
Author

In #92577#1260673, @JulianEisel wrote:
I have a fix for this ready but don't have the time to upload and explain it now. Will do it later today or tomorrow.

Hello Julian Eisel

This feature also has the same problem in 3.1 Alpha, I think it should be fixed together.

> In #92577#1260673, @JulianEisel wrote: > I have a fix for this ready but don't have the time to upload and explain it now. Will do it later today or tomorrow. Hello Julian Eisel This feature also has the same problem in 3.1 Alpha, I think it should be fixed together.

This issue was referenced by 2e53f8b4b1

This issue was referenced by 2e53f8b4b13186ef9ca04e1979c548ea1acdc763
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92577
No description provided.